# FHSWF-XAI-Information-Retrieval

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: service.py
notebooks/: XAI-Code.ipynb  XAI_Embeddings.ipynb  direct-token-importance-and-lime.ipynb  training.ipynb  umap_concepts_scatter_plot.html
notebooks/modeling_files/: vocab.pkl
