[project]
name = "xai"
version = "0.1.0"
description = ""
authors = [
    {name = "Christopher Keibel",email = "christopher.keibel.90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch (==2.2.*)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "chroma (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
